# apaleo-api-client

./: .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  SECURITY.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml  tasks.py
.ai/context/: project.md
.github/: copilot-instructions.md
.github/prompts/: docs-gen-api-method.prompt.md  github-issue.prompt.md  no-code.prompt.md  test-unit.prompt.md  tldr.prompt.md
.github/workflows/: linter.yml  python-publish.yml  tag-release.yml  tests.yml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/api/: index.html
0.1/changelog/: index.html
0.1/contributing/: index.html
0.1/help_with_apaleo/: index.html
0.1/install/: index.html
0.1/reference/: index.html
0.1/search/: search_index.json
0.1/why/: index.html
api/: index.html
api/core/: index.html
api/core/inventory_v1/: index.html
api/core_v1/inventory_list_properties/: index.html
api/identity/identity_v1/: index.html
api/identity_v1/identity_list_invitations/: index.html
docs/: index.md
docs/api/: core.md  index.md
docs/api/core/: inventory_v1.md
docs/api/core_v1/: inventory_list_properties.md
docs/api/identity/: identity_v1.md
docs/api/identity_v1/: identity_list_invitations.md
docs/examples/: authorization_code_flow.md  client.md  client_credentials_flow.md  index.md
docs/extra/: custom.css
docs/main/: changelog.md  contributing.md  install.md  troubleshooting.md  why.md
docs/theme/: announce.html
examples/: index.html
examples/authorization_code_flow/: index.html
examples/client/: index.html
examples/client_credentials_flow/: index.html
main/changelog/: index.html
main/contributing/: index.html
main/install/: index.html
main/troubleshooting/: index.html
main/why/: index.html
miscs/codegen-apaleo-api-client/: Makefile  codegen.py  pyproject.toml
miscs/codegen-apaleo-api-client/basemodels/: core_v0_inventory.py  core_v1_finance.py  core_v1_inventory.py  identity_v1_identity.py
miscs/codegen-apaleo-api-client/dataclasses/: core_v0_inventory.py  core_v1_finance.py  core_v1_inventory.py
miscs/test-apaleo-api-client/: pyproject.toml  test.py  test_authorization_code.py  test_authorization_code_slim.py  test_client_credentials.py
search/: search_index.json
src/apaleoapi/: __init__.py  client.py  constants.py  dataclasses.py  exceptions.py  logging.py  schemas.py  typing.py  utils.py
src/apaleoapi/apaleo/: base.py  exceptions.py
src/apaleoapi/apaleo/common/: __init__.py  base.py  enums.py
src/apaleoapi/apaleo/core/: __init__.py  api.py
src/apaleoapi/apaleo/identity/: api.py
src/apaleoapi/http/: auth.py  response_handler.py  response_validator.py  transport.py
src/apaleoapi/ports/: client.py
src/apaleoapi/ports/apaleo/: base.py
src/apaleoapi/ports/http/: auth.py  response_handler.py  response_validator.py  transport.py
src/apaleoapi/services/: list_fetcher.py  response_handler.py  response_validator.py
src/apaleoapi/validation/: url_path_validator.py
tests/: conftest.py  test_client.py
tests/integration/: conftest.py
tests/integration/core/: test_v1_inventory.py
tests/integration/identity/: test_v1_identity.py
tests/services/: test_url_path_validator.py
tests/unit/: conftest.py  test_client.py
tests/unit/apaleo/: test_base.py
tests/unit/apaleo/common/: test_base.py
tests/unit/http/: test_response_handler.py  test_response_validator.py
tests/unit/services/: test_response_handler.py  test_url_path_validator.py
tests/unit/validation/: test_url_path_validator.py
theme/: announce.html  main.html
(+47 files in other folders)
